--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="author" content="" />
         <title>Blog Home - Start Bootstrap Template</title>
         <!-- Favicon-->
+        <link href="/manifest.json" rel="manifest" />
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
@@ -162,5 +163,24 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script type="text/javascript" src="//cdn.pushwoosh.com/webpush/v3/pushwoosh-web-notifications.js" async></script>
+        <script type="text/javascript">
+            var Pushwoosh = Pushwoosh || [];
+            Pushwoosh.push(['init', {
+                logLevel: 'info', // possible values: error, info, debug
+                applicationCode: '30B16-99B03', // you application code from Pushwoosh Control Panel
+                safariWebsitePushID: 'web.com.example.domain', //  unique reverse-domain string, obtained in you Apple Developer Portal. Only needed if you send push notifications to Safari browser
+                defaultNotificationTitle: 'Pushwoosh Test Javid', // sets a default title for push notifications
+                defaultNotificationImage: 'https://yoursite.com/img/logo-medium.png', // URL to custom custom notification image
+                autoSubscribe: false, // or true. If true, prompts a user to subscribe for pushes upon SDK initialization
+                subscribeWidget: {
+                  enable: true
+                },
+                userId: 'user_id', // optional, set custom user ID
+                tags: {
+                    'Name': 'Test Javid'   	// optional, set custom Tags
+                }
+            }]);
+        </script>
     </body>
 </html>
